--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.6",
+    "mongodb": "^3.6.3",
     "cors": "^2.8.5",
     "epg-parser": "^0.1.6",
     "express": "^4.18.2",
