--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.6",
-    "mongodb": "^3.6.3",
+    "level": "^9.0.0",
     "cors": "^2.8.5",
     "epg-parser": "^0.1.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "winston": "^3.17.0",
     "iptv-playlist-parser": "github:4gray/iptv-playlist-parser"
   }
 }
